--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,7 +47,6 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\CVSReader.cs" />
-     <Compile Include="Assets\Scripts\CombineConfig.cs" />
      <Compile Include="Assets\Scripts\Equip\CombineMeshTask.cs" />
      <Compile Include="Assets\Scripts\Equip\CombineMeshUtility.cs" />
      <Compile Include="Assets\Scripts\Equip\DecalLoadTask.cs" />
@@ -66,7 +65,7 @@
      <Compile Include="Assets\Scripts\Table\FashionSuit.cs" />
      <Compile Include="Assets\Scripts\Table\People.cs" />
      <Compile Include="Assets\Scripts\XCommon.cs" />
-     <Compile Include="Assets\Scripts\XTableAsyncLoader.cs" />
+     <Compile Include="Assets\Scripts\XEditor\CombineConfig.cs" />
      <None Include="Assets\Resources\Shader\Particle\ParticleAdd.shader" />
      <None Include="Assets\Resources\Shader\NGUI\Unlit - Text 2.shader" />
      <None Include="Assets\Resources\Shader\Projector\RectBlend.shader" />
@@ -165,7 +164,6 @@
      <None Include="Assets\Resources\Shader\Projector\CircleAdd.shader" />
      <None Include="Assets\Resources\Shader\NGUI\Unlit - Colored Texture 1.shader" />
      <None Include="Assets\Resources\Shader\Skin\Skin-RimLightBlend8NoLight.shader" />
-     <None Include="Assets\Editor\ImporterData\Table.xml" />
      <None Include="Assets\Resources\Shader\Include\CommonHead_Include.cginc" />
      <None Include="Assets\Resources\Shader\FxPro\MobileDOFPro.shader" />
      <None Include="Assets\Resources\Shader\Scene\CustomLightSphere.shader" />
