equip and fashion

--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -47,7 +47,6 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Editor\Assets\AnimationEditor.cs" />
-     <Compile Include="Assets\Editor\Assets\BytesTableEditor.cs" />
      <Compile Include="Assets\Editor\Assets\BytesTableViewEditor.cs" />
      <Compile Include="Assets\Editor\Assets\EquipPreview.cs" />
      <Compile Include="Assets\Editor\Assets\FbxEditor.cs" />
@@ -58,6 +57,7 @@
      <Compile Include="Assets\Editor\Assets\SceneEditor.cs" />
      <Compile Include="Assets\Editor\Assets\SelectBones.cs" />
      <Compile Include="Assets\Editor\Assets\TableEditor.cs" />
+     <Compile Include="Assets\Editor\Assets\TextInspector.cs" />
      <Compile Include="Assets\Editor\Assets\TextureCombine.cs" />
      <Compile Include="Assets\Editor\Assets\TextureCommonCompress.cs" />
      <Compile Include="Assets\Editor\Assets\TextureEditor.cs" />
