--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\Scripts\Table\People.cs" />
      <Compile Include="Assets\Scripts\XCommon.cs" />
      <Compile Include="Assets\Scripts\XEditor\CombineConfig.cs" />
+     <Compile Include="Assets\Scripts\XEditor\XTableUtil.cs" />
      <None Include="Assets\Resources\Shader\Particle\ParticleAdd.shader" />
      <None Include="Assets\Resources\Shader\NGUI\Unlit - Text 2.shader" />
      <None Include="Assets\Resources\Shader\Projector\RectBlend.shader" />
