fashion and equip

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,14 @@
 *.suo
 *.tmp
 *.user
+Assembly-CSharp.csproj
+Assembly-CSharp-Editor-vs.csproj
+Assembly-CSharp-Editor.csproj
+Assembly-CSharp-vs.csproj
+Asset_Process_Proj.CSharp.csproj
+Asset_Process_Proj.CSharp.Editor.csproj
+Asset_Process_Proj.sln
+Asset_Process_Proj-csharp.sln
 *.userprefs
 *.pidb
 *.booproj
