--- a/Asset_Process_Proj.CSharp.Editor.csproj
+++ b/Asset_Process_Proj.CSharp.Editor.csproj
@@ -142,24 +142,24 @@
     <Compile Include="Assets\Editor\ABSystem\AssetTarget.cs" />
     <Compile Include="Assets\Editor\ABSystem\AssetType.cs" />
     <Compile Include="Assets\Editor\ABSystem\HashUtil.cs" />
-    <Compile Include="Assets\Editor\Assets\AnimationEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\BytesTableViewEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\EquipPreviewEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\FbxEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\MakeEquip.cs" />
-    <Compile Include="Assets\Editor\Assets\MaterialEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\MaterialFindEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\PrefabEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\SceneEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\SelectBonesEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\TableEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\TextAssetInspector.cs" />
-    <Compile Include="Assets\Editor\Assets\TextureCombine.cs" />
-    <Compile Include="Assets\Editor\Assets\TextureCommonCompress.cs" />
-    <Compile Include="Assets\Editor\Assets\TextureEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\TextureFindEditor.cs" />
-    <Compile Include="Assets\Editor\Assets\XDataIO.cs" />
-    <Compile Include="Assets\Editor\Assets\XResImportModelEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\AnimationEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\BytesTableViewEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\EquipPreviewEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\FbxEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\MakeEquip.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\MaterialEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\MaterialFindEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\PrefabEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\SceneEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\SelectBonesEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\TableEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\TextAssetInspector.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\TextureCombine.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\TextureCommonCompress.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\TextureEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\TextureFindEditor.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\XDataIO.cs" />
+    <Compile Include="Assets\Editor\AssetsEditor\XResImportModelEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Editor\Cache\cache.txt" />
