--- a/tools_proj/DnTable/DnTable/DnTable.vcxproj
+++ b/tools_proj/DnTable/DnTable/DnTable.vcxproj
@@ -135,6 +135,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>
+      </AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
