--- a/Asset_Process_Proj.CSharp.csproj
+++ b/Asset_Process_Proj.CSharp.csproj
@@ -110,14 +110,6 @@
     <Compile Include="Assets\Scripts\Entity\XObject.cs" />
     <Compile Include="Assets\Scripts\Entity\XPlayer.cs" />
     <Compile Include="Assets\Scripts\Entity\XRole.cs" />
-    <Compile Include="Assets\Scripts\Equip\BaseLoadTask.cs" />
-    <Compile Include="Assets\Scripts\Equip\CombineMeshTask.cs" />
-    <Compile Include="Assets\Scripts\Equip\CombineMeshUtility.cs" />
-    <Compile Include="Assets\Scripts\Equip\EPartType.cs" />
-    <Compile Include="Assets\Scripts\Equip\MountLoadTask.cs" />
-    <Compile Include="Assets\Scripts\Equip\PartLoadTask.cs" />
-    <Compile Include="Assets\Scripts\Equip\XEquipUtil.cs" />
-    <Compile Include="Assets\Scripts\Equip\XMeshTexData.cs" />
     <Compile Include="Assets\Scripts\Event\XEventDefine.cs" />
     <Compile Include="Assets\Scripts\Event\XEventMgr.cs" />
     <Compile Include="Assets\Scripts\Input\XFakeTouchItem.cs" />
@@ -127,10 +119,19 @@
     <Compile Include="Assets\Scripts\Input\XTouchItem.cs" />
     <Compile Include="Assets\Scripts\Input\XVirtualTab.cs" />
     <Compile Include="Assets\Scripts\Main.cs" />
-    <Compile Include="Assets\Scripts\Others\CombineConfig.cs" />
-    <Compile Include="Assets\Scripts\Others\XException.cs" />
-    <Compile Include="Assets\Scripts\Others\XRotation.cs" />
-    <Compile Include="Assets\Scripts\Others\XTableUtil.cs" />
+    <Compile Include="Assets\Scripts\Parts\Anim\AnimParam.cs" />
+    <Compile Include="Assets\Scripts\Parts\Equip\BaseLoadTask.cs" />
+    <Compile Include="Assets\Scripts\Parts\Equip\CombineMeshTask.cs" />
+    <Compile Include="Assets\Scripts\Parts\Equip\CombineMeshUtility.cs" />
+    <Compile Include="Assets\Scripts\Parts\Equip\EPartType.cs" />
+    <Compile Include="Assets\Scripts\Parts\Equip\MountLoadTask.cs" />
+    <Compile Include="Assets\Scripts\Parts\Equip\PartLoadTask.cs" />
+    <Compile Include="Assets\Scripts\Parts\Equip\XEquipUtil.cs" />
+    <Compile Include="Assets\Scripts\Parts\Equip\XMeshTexData.cs" />
+    <Compile Include="Assets\Scripts\Parts\Others\CombineConfig.cs" />
+    <Compile Include="Assets\Scripts\Parts\Others\XException.cs" />
+    <Compile Include="Assets\Scripts\Parts\Others\XRotation.cs" />
+    <Compile Include="Assets\Scripts\Parts\Others\XTableUtil.cs" />
     <Compile Include="Assets\Scripts\Scene\IXPlayerAction.cs" />
     <Compile Include="Assets\Scripts\Scene\PlayerAction.cs" />
     <Compile Include="Assets\Scripts\Scene\XCameraWall.cs" />
@@ -154,6 +155,8 @@
     <Compile Include="Assets\Scripts\Test\TestAB.cs" />
     <Compile Include="Assets\Scripts\Test\TestCPP.cs" />
     <Compile Include="Assets\Scripts\Test\TestScene.cs" />
+    <Compile Include="Assets\Scripts\UI\CanvasBehaviour.cs" />
+    <Compile Include="Assets\Scripts\UI\CanvasDlg.cs" />
     <Compile Include="Assets\Scripts\UI\DlgBehaviourBase.cs" />
     <Compile Include="Assets\Scripts\UI\IUIDlg.cs" />
     <Compile Include="Assets\Scripts\UI\JoyStickDlg.cs" />
