--- a/Asset_Process_Proj.CSharp.csproj
+++ b/Asset_Process_Proj.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.5.2f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -242,37 +240,6 @@
     <None Include="Assets\Resources\Shader\Include\PBS_Include.cginc" />
     <None Include="Assets\Resources\Shader\Include\Shadow_Include.cginc" />
     <None Include="Assets\Resources\Shader\Include\SkinBlend_Include.cginc" />
-    <None Include="Assets\Resources\Shader\NGUI\Blood.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\UI-Mask 1.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\UI-Mask.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\UI-RenderTexture.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\UI_Include.cginc" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Colored Texture 1.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Colored Texture 2.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Colored Texture 3.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Colored Texture.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Colored Texture32 1.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Colored Texture32 2.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Colored Texture32 3.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Colored Texture32.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Masked Colored.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - ParticleAdditive 1.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - ParticleAdditive 2.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - ParticleAdditive 3.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - ParticleAdditive.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Separate Alpha Colored 1.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Separate Alpha Colored 2.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Separate Alpha Colored 3.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Separate Alpha Colored.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Text 1.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Text 2.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Text 3.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Text.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Transparent Colored 1.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Transparent Colored 2.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Transparent Colored 3.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - Transparent Colored.shader" />
-    <None Include="Assets\Resources\Shader\NGUI\Unlit - WhiteAnim.shader" />
     <None Include="Assets\Resources\Shader\Particle\Particle-Add(4Tex).shader" />
     <None Include="Assets\Resources\Shader\Particle\Particle-Add(RGB).shader" />
     <None Include="Assets\Resources\Shader\Particle\Particle-Add(clip).shader" />
