--- a/Asset_Process_Proj.CSharp.csproj
+++ b/Asset_Process_Proj.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.5.2f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -139,19 +137,19 @@
     <Compile Include="Assets\Scripts\Parts\Others\XException.cs" />
     <Compile Include="Assets\Scripts\Parts\Others\XRotation.cs" />
     <Compile Include="Assets\Scripts\Parts\Others\XTableUtil.cs" />
-    <Compile Include="Assets\Scripts\Scene\IXPlayerAction.cs" />
-    <Compile Include="Assets\Scripts\Scene\PlayerAction.cs" />
-    <Compile Include="Assets\Scripts\Scene\XCameraWall.cs" />
+    <Compile Include="Assets\Scripts\Scene\Action\IXPlayerAction.cs" />
+    <Compile Include="Assets\Scripts\Scene\Action\PlayerAction.cs" />
+    <Compile Include="Assets\Scripts\Scene\Action\XCylinderTrigger.cs" />
+    <Compile Include="Assets\Scripts\Scene\Action\XTrigger.cs" />
+    <Compile Include="Assets\Scripts\Scene\Wall\XCameraWall.cs" />
+    <Compile Include="Assets\Scripts\Scene\Wall\XCutsceneWall.cs" />
+    <Compile Include="Assets\Scripts\Scene\Wall\XHorseWall.cs" />
+    <Compile Include="Assets\Scripts\Scene\Wall\XSpawnWall.cs" />
+    <Compile Include="Assets\Scripts\Scene\Wall\XTerminalWall.cs" />
+    <Compile Include="Assets\Scripts\Scene\Wall\XTransferWall.cs" />
+    <Compile Include="Assets\Scripts\Scene\Wall\XWall.cs" />
     <Compile Include="Assets\Scripts\Scene\XCurve.cs" />
-    <Compile Include="Assets\Scripts\Scene\XCutsceneWall.cs" />
-    <Compile Include="Assets\Scripts\Scene\XCylinderTrigger.cs" />
-    <Compile Include="Assets\Scripts\Scene\XHorseWall.cs" />
     <Compile Include="Assets\Scripts\Scene\XScene.cs" />
-    <Compile Include="Assets\Scripts\Scene\XSpawnWall.cs" />
-    <Compile Include="Assets\Scripts\Scene\XTerminalWall.cs" />
-    <Compile Include="Assets\Scripts\Scene\XTransferWall.cs" />
-    <Compile Include="Assets\Scripts\Scene\XTrigger.cs" />
-    <Compile Include="Assets\Scripts\Scene\XWall.cs" />
     <Compile Include="Assets\Scripts\Table\DefaultEquip.cs" />
     <Compile Include="Assets\Scripts\Table\EquipSuit.cs" />
     <Compile Include="Assets\Scripts\Table\FashionList.cs" />
