--- a/Asset_Process_Proj.CSharp.csproj
+++ b/Asset_Process_Proj.CSharp.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.5.2f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -94,6 +92,12 @@
     <Compile Include="Assets\Scripts\Camera\XCamera.cs" />
     <Compile Include="Assets\Scripts\Camera\XCameraActionComponent.cs" />
     <Compile Include="Assets\Scripts\Camera\XCameraCloseUpComponent.cs" />
+    <Compile Include="Assets\Scripts\Common\CVSReader.cs" />
+    <Compile Include="Assets\Scripts\Common\Timer.cs" />
+    <Compile Include="Assets\Scripts\Common\TimerManager.cs" />
+    <Compile Include="Assets\Scripts\Common\XAttributeDefine.cs" />
+    <Compile Include="Assets\Scripts\Common\XCommon.cs" />
+    <Compile Include="Assets\Scripts\Common\XGlobalConfig.cs" />
     <Compile Include="Assets\Scripts\Component\XAIComponent.cs" />
     <Compile Include="Assets\Scripts\Component\XAnimComponent.cs" />
     <Compile Include="Assets\Scripts\Component\XAttributes.cs" />
@@ -128,15 +132,9 @@
     <Compile Include="Assets\Scripts\Level\XLevelSpawnMgr.cs" />
     <Compile Include="Assets\Scripts\Level\XLevelStatistics.cs" />
     <Compile Include="Assets\Scripts\Level\XLevelTask.cs" />
-    <Compile Include="Assets\Scripts\Main\CVSReader.cs" />
     <Compile Include="Assets\Scripts\Main\GameEnine.cs" />
     <Compile Include="Assets\Scripts\Main\GameEntrance.cs" />
-    <Compile Include="Assets\Scripts\Parts\Common\XAttributeDefine.cs" />
-    <Compile Include="Assets\Scripts\Parts\Common\XCommon.cs" />
-    <Compile Include="Assets\Scripts\Parts\Common\XGlobalConfig.cs" />
     <Compile Include="Assets\Scripts\Parts\Anim\AnimParam.cs" />
-    <Compile Include="Assets\Scripts\Parts\Common\Timer.cs" />
-    <Compile Include="Assets\Scripts\Parts\Common\TimerManager.cs" />
     <Compile Include="Assets\Scripts\Parts\Equip\BaseLoadTask.cs" />
     <Compile Include="Assets\Scripts\Parts\Equip\CombineMeshTask.cs" />
     <Compile Include="Assets\Scripts\Parts\Equip\CombineMeshUtility.cs" />
