--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 **/tools_proj/XForm/XForm/bin/
 **/tools_proj/XForm/XForm/obj/
-**/tools_proj/XForm/
+**/tools_proj/XForm/Log/
 **/tools_proj/CPPTable/Debug/
 **/tools_proj/CPPTable/DnTable/Debug/
 **/tools_proj/CPPTable/DnTable/x64/
