--- a/Assets/Editor/EditorResources/Skill/player_archer/Player_archer_attack_duoduansheji.config
+++ b/Assets/Editor/EditorResources/Skill/player_archer/Player_archer_attack_duoduansheji.config
@@ -1,31 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <XConfigData>
-  <SkillName>Player_archer_attack_kunbangsheji</SkillName>
+  <SkillName>Player_archer_attack_duoduansheji</SkillName>
   <Speed>2</Speed>
   <RotateSpeed>12</RotateSpeed>
-  <SkillClip>Assets/Resources/Animation/Player_archer/Player_archer_attack_towshot.anim</SkillClip>
-  <SkillClipName>Player_archer_attack_towshot</SkillClipName>
+  <SkillClip>Assets/Resources/Animation/Player_archer/Player_archer_attack_magicarrow.anim</SkillClip>
+  <SkillClipName>Player_archer_attack_magicarrow</SkillClipName>
   <Directory>Player_archer/</Directory>
   <Player>2</Player>
-  <Dummy>301</Dummy>
+  <Dummy>201</Dummy>
   <Result>
     <XResultDataExtra>
-      <Result_Ratio>0.619047642</Result_Ratio>
-    </XResultDataExtra>
-    <XResultDataExtra>
-      <Result_Ratio>0.3214286</Result_Ratio>
+      <Result_Ratio>0.152777776</Result_Ratio>
     </XResultDataExtra>
   </Result>
   <Ja />
   <Logical>
     <Not_Move_At_Ratio>0</Not_Move_At_Ratio>
-    <Not_Move_End_Ratio>0</Not_Move_End_Ratio>
+    <Not_Move_End_Ratio>0.952380836</Not_Move_End_Ratio>
     <Not_Dash_At_Ratio>0</Not_Dash_At_Ratio>
     <Not_Dash_End_Ratio>0</Not_Dash_End_Ratio>
     <Rotate_At_Ratio>0</Rotate_At_Ratio>
     <Rotate_End_Ratio>0</Rotate_End_Ratio>
     <QTEDataEx />
-    <Cancel_At_Ratio>0</Cancel_At_Ratio>
+    <Cancel_At_Ratio>0.476190418</Cancel_At_Ratio>
     <Preserved_Ratio>0</Preserved_Ratio>
     <Preserved_End_Ratio>0</Preserved_End_Ratio>
     <ExString_Ratio>0</ExString_Ratio>
