--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@
 **/tools_proj/XForm/Log/
 **/tools_proj/XCPP/XCPP/Debug/
 **/tools_proj/XCPP/XCPP/x64/
+**/tools_proj/XCPP/XCPP.opensdf
+**/tools_proj/XCPP/ipch/
+**/tools_proj/XCPP/Debug/
+**/tools_proj/XCPP/Release/
+**/tools_proj/XCPP/XCPP/Release/
+**/tools_proj/XCPP/XTable/Debug/
+**/tools_proj/XCPP/XTable/Release/
 **/tools_proj/XLib/XLib/bin/
 **/tools_proj/XLib/XLib/obj/
 
