--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,11 @@
 **/tools_proj/XCPP/ipch/
 **/tools_proj/XCPP/Debug/
 **/tools_proj/XCPP/Release/
+**/tools_proj/XCPP/x64/
 **/tools_proj/XCPP/XCPP/Release/
 **/tools_proj/XCPP/XTable/Debug/
 **/tools_proj/XCPP/XTable/Release/
+**/tools_proj/XCPP/XTable/x64/
 **/tools_proj/XLib/XLib/bin/
 **/tools_proj/XLib/XLib/obj/
 
