--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 **/tools_proj/XCPP/XCPP/Debug/
 **/tools_proj/XCPP/XCPP/x64/
 **/tools_proj/XCPP/XCPP.opensdf
+**/tools_proj/XCPP/XCPP.sdf
 **/tools_proj/XCPP/ipch/
 **/tools_proj/XCPP/Debug/
 **/tools_proj/XCPP/Release/
